# scraping_siped

./: .dockerignore  .env  .gitignore  1_get_lista_expedientes.py  3_get_movimientos_texto.py  Dockerfile  Procfile  README.md  app.py  config.py  db_manager.py  dev_control.sh  diagnostico.py  docker-compose.yml  dump.rdb  dump_publicos.json  env(1)  expedientes_completos.csv  extensions.py  gestor_almacenamiento.py  gestor_tareas.py  gitignore  log.txt  logger.py  main.py  mkdocs.yml  models.py  parsers.py  pyproject.toml  pytest.ini  render.yaml  requirements-prod.txt  requirements.txt  resultados_tests  scraper.py  scraper_tasks.py  session_manager.py  start.sh  tasks.py  test_results  (+1 more)
catalogos/: abogados.py  dependencias.py  init_db.py  localidades.py  tipos_juicio.py
docs/: index.md
fases/: fase_1.py  fase_2.py  fase_3.py  fase_busqueda_avanzada.py  fase_descarga_publica.py  fase_publica_1.py  fase_unico.py
movimientos_expedientes/: 10264-2023 - TEJADA GISELLE ALEJANDRA Y OTRA C- TEJADA JUAN CARLOS S- MEDIDAS DE ABORDAJE INTRAFAMILIAR.csv  10642-2023 - CÁRDENAS, RUBÉN ALBERTO S-BENEFICIO DE LITIGAR SIN GASTOS.csv  10693-2024 - GOMEZ ANDRADE MARIA FLOR C- CARDENAS RUBEN ALBERTO S- CUIDADO PERSONAL.csv  10726-1023 - DICKIE SILVIA ALEJANDRA C- HERRERA ADRIAN EDELMIRO S- MEDIDAS DE ABORDAJE INTRAFAMILIAR.csv  10944-2025 - BRIAMONTE JORGE ALBERTO C- MONTAÑA SANDRA PATRICIA S- MONITORIO (EJECUTIVO).csv  10946-2025 - BRIAMONTE JORGE ALBERTO C- RODRIGUEZ JOSE MANUEL S- MONITORIO (EJECUTIVO).csv  11212-2003 - MUÑOZ ABURTO ANTONIO RIGOBERTO S- SUCESION AB-INTESTATO.csv  (+78 more)
(+55 files in other folders)
