[project]
name = "scraping-siped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "fpdf2>=2.8.7",
    "gunicorn>=25.3.0",
    "pyfakefs>=6.2.0",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-selenium>=4.1.0",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "wtforms[email]>=3.2.2",
]
